# ai-tryon-tool

./: .env.example  .gitignore  LICENSE  README.md  app.py  requirements.txt
.streamlit/: config.toml
MagicMirror-main/: .gitignore  CHANGELOG.md  README.md  package.json  pnpm-lock.yaml  uno.config.ts  vite.config.ts
MagicMirror-main/.github/workflows/: build-app.yaml  build-server.yaml  debug-server.yaml
MagicMirror-main/docs/cn/: faq.md  install.md  readme.md  usage.md
MagicMirror-main/docs/en/: faq.md  install.md  usage.md
MagicMirror-main/scripts/: build-server.sh  dist.js
MagicMirror-main/src/: App.tsx  main.tsx
MagicMirror-main/src-python/: pyproject.toml  requirements.txt  server.py
MagicMirror-main/src-python/magic/: app.py  face.py
MagicMirror-main/src-tauri/: Cargo.toml  tauri.conf.json
MagicMirror-main/src-tauri/capabilities/: default.json
MagicMirror-main/src-tauri/icons/: icon.icns
MagicMirror-main/src-tauri/src/: commands.rs  lib.rs  main.rs  utils.rs
MagicMirror-main/src/assets/locales/: en.json  zh.json
MagicMirror-main/src/components/: LanguageSwitcher.tsx  ProgressBar.tsx
MagicMirror-main/src/hooks/: useDownload.ts  useDragDrop.ts  useOS.ts  useServer.ts  useSwapFace.ts
MagicMirror-main/src/pages/: Launch.tsx  Mirror.tsx
MagicMirror-main/src/services/: i18n.ts  server.ts  utils.ts
MagicMirror-main/src/styles/: global.css  mirror.css  reset.css
