[tool.poetry]
name = "magic"
version = "2.0.0"
description = "Instant AI Face Swap, Hairstyles & Outfits — One click to a brand new you!"
authors = ["Del Wang <hello@xbox.work>"]


[tool.poetry.dependencies]
python = "^3.10"
tinyface = "^1.0.1"
bottle = "^0.13.2"

[tool.poetry.group.dev.dependencies]
black = "^24.10.0"
mypy = "^1.13.0"
pylint = "^3.3.1"
nuitka = "^2.5.9"


[tool.mypy]
ignore_missing_imports = true

[tool.pylint.main]
ignored-modules = ["cv2"]
disable = [
  "R0903",
  "R0913",
  "R0914",
  "R0915",
  "R0912",
  "C0103",
  "C0301",
  "C0116",
  "C0114",
  "C0115",
  "W0707",
  "W0718",
  "W0614",
  "W0719",
  "W0602",
  "W0102",
]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
